--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <h5 class="card-title">Parallax Museum</h5>
         <p class="card-text">a website that brings famous paintings to life with mesmerizing parallax effects! Step into the digital art gallery I've designed, where renowned masterpieces take on a new dimension. With each scroll, these paintings come alive, Explore my creation and embark on a visual journey through the magic of parallax scrolling. </p>
 
-        <a style="text-decoration: none; color:yellow ; font-family: 'Zen Dots', sans-serif;" href=" https://git.arts.ac.uk/pages/19032522/Parallax_Museum_Week_9/" target="_blank">Show me</a>
+        <a style="text-decoration: none; color:yellow ; font-family: 'Zen Dots', sans-serif;" href="https://lvxmuseum.netlify.app" target="_blank">Show me</a>
 
       </div>
     </div>
